# fabric-data-engineering-ws

./: .gitignore  DISCLAIMER.md  LICENSE.md  README.md  SUPPORT.md  before_cleanup.txt  config.json  copilot-policy.md  fabric-vnet-setup.md  fabric_onelake_security.md  multi_agent_orchestration_fabric_data_agent.excalidraw  orchestratioon-service.excalidraw  python-3-10-environment.yml  requirements.txt
onelake-security-role-service/: .coverage  onelake-security-role-service-README.md  onelake-security-role-service.excalidraw  pyproject.toml  requirements.txt  yaml-schema-reference.yml
onelake-security-role-service/.cicd/: azure-pipelines.yml  onelake-security-role-service-cicd.yml
onelake-security-role-service/docs/: onelake-security-role-service-README.md  onelake-security-role-service.excalidraw
onelake-security-role-service/docs/uml_class_diagrams/: api_client.excalidraw  audit.excalidraw  file_tracker.excalidraw  models.excalidraw  (+7 more)
onelake-security-role-service/notebooks/: onelake_role_creation_nb.ipynb  onelake_role_creation_nb.py  onelake_role_mapping_nb.ipynb  onelake_role_mapping_nb.py
onelake-security-role-service/pipeline/: onelake_security_role_pl.json  pipeline-setup-guide.md
onelake-security-role-service/sql/: create_audit_tables.sql
onelake-security-role-service/templates/: role-definition-template.yml  user-mapping-template.yml
onelake-security-role-service/tests/: conftest.py  test_api_client.py  test_audit.py  test_file_tracker.py  test_models.py  test_reconcilers.py  test_translators.py  test_workflow_service.py  test_yaml_parser.py
(+807 files in other folders)
